--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.16.3",
+    "forever": "^0.15.3",
+    "mysql2": "^1.5.3",
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1",
