--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "mysql2": "^1.5.3",
+    "nodemailer": "^4.6.7",
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1",
