--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "generals",
-  "version": "1.0.1",
-  "description": "my first socket.io app",
+  "version": "2.0.0-beta",
+  "description": "Five In A Row",
   "dependencies": {
     "express": "^4.16.3",
     "mysql2": "^1.5.3",
     "nodemailer": "^4.6.7",
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
-    "socket.io": "^2.1.1",
-    "sqlite3": "^4.0.1"
+    "socket.io": "^2.1.1"
   }
 }
