--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "mysql2": "^1.5.3",
     "redis": "^2.8.0",
     "sequelize": "^4.38.0",
-    "socket.io": "^2.1.1",
-    "sqlite3": "^4.0.1"
+    "socket.io": "^2.1.1"
   }
 }
